# 2IMG10

./: .gitignore  Visualization.ipynb  requirements.txt
rust/: .gitignore  Cargo.toml  README.md
rust/src/: io.rs  main.rs  reeb_graph.rs
rust/src/geometry/: disk.rs  line.rs  mod.rs  polygon.rs
rust/src/geometry/dcel/: beachline.rs  mod.rs  point.rs  util.rs
rust/src/graph/: mod.rs
src/: main.ipynb  videoizer.py  writer.py
