[package]
name = "island-tracker"
version = "0.1.0"
authors = ["satanja <s.a.tanja@student.tue.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
fxhash = "*"
geo = "0.18.0"
rand = "0.8.4"
ordered-float = "1.1.1"
log = "0.3"
fnv = "1.0"
geo-svg = "0.5.0"